[tool.poetry]
name = "kdmapi"
version = "1.0.1"
description = "KDMAPI (Keppy's Direct MIDI API) wrapper for Python"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/SebaUbuntu/kdmapi"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
